# eutopic-api

./: Cargo.toml  LICENSE  README.md
operations/: Dockerfile
src/: main.rs
src/api/: Cargo.toml
src/api/src/: lib.rs  main.rs
src/api/src/endpoints/account/: cancel_account_deletion.rs  config.rs  create_account.rs  get_account.rs  mod.rs  request_account_deletion.rs
src/api/src/middlewares/: auth.rs
src/api/src/services/: amqp.rs  api_helpers.rs  data.rs  delete_account_request_queue.rs  mod.rs  new_user_queue.rs
src/api/src/utils/: config.rs  store.rs
src/common/: Cargo.toml
src/common/src/: async_helpers.rs  error.rs  lib.rs
src/common/src/actor/: neo4j.rs
src/data/: Cargo.toml
src/data/src/: helpers.rs  lib.rs  types.rs
src/data/src/models/: account.rs
src/data/src/repositories/: account.rs
src/data/src/serialization/: mod.rs  neo4j_record.rs  neo4j_result.rs
src/utils/: config.rs  store.rs
