[package]
name = "eutopic-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.2"
actix-web = "4.0.1"
actix-web-httpauth = "0.8.0"
actix-cors = "0.6.1"
bolt-client = "0.10.1"
bolt-proto = "0.11.0"
dotenv = "0.15"
env_logger = "0.9.0"
fireauth = "0.1.5"
