[package]
name = "eutopic-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.2"
actix-web = "4.0.1"
actix-web-httpauth = "0.8.0"
actix-cors = "0.6.1"
bolt-client = "0.10.1"
bolt-proto = "0.11.0"
dotenv = "0.15"
env_logger = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_qs = { version = "0.10.1", features = ["actix4"] }
thiserror = "1.0.31"
anyhow = "1.0.0"
ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.1"  }
api-helpers = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.1"  }
common-data = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.1"  }
amqp-helpers = { git = "https://github.com/ticketland-io/amqp-helpers", version = "0.1.5" }
ticketland-signdrop = { git = "https://github.com/ticketland-io/ticketland-signdrop", version = "0.1.2" }
borsh = "0.9.3"
