[package]
name = "eutopic-api"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.2"
actix-web = "4.0.1"
actix-cors = "0.6.1"
dotenv = "0.15"
eyre = "0.6.8"
env_logger = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_qs = { version = "0.10.1", features = ["actix4"] }
ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.17"  }
api-helpers = { git = "https://github.com/ticketland-io/common-rust", version = "0.3.20"  }
ticketland-data = { git = "https://github.com/ticketland-io/common-rust", version = "0.1.31"  }
amqp-helpers = { git = "https://github.com/ticketland-io/amqp-helpers", version = "0.1.9" }
ticketland-signdrop = { git = "https://github.com/ticketland-io/ticketland-signdrop", version = "0.1.2" }
borsh = "0.9.3"
