[package]
name = "eutopic-api"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.2"
actix-web = "4.0.1"
actix-cors = "0.6.1"
chrono = "0.4.21"
dotenv = "0.15"
eyre = "0.6.8"
env_logger = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_qs = { version = "0.10.1", features = ["actix4"] }
ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.19", rev="0ba21c1" }
api-helpers = { git = "https://github.com/ticketland-io/common-rust", version = "0.3.26", rev="0ba21c1" }
ticketland-data = { git = "https://github.com/ticketland-io/common-rust", version = "0.1.55", rev="0ba21c1" }
ticketland-crypto = { git = "https://github.com/ticketland-io/common-rust", version = "0.1.19", rev="0ba21c1" }
ticketland-event-handler = { git = "https://github.com/ticketland-io/ticketland-event-handler", version="0.1.26", rev = "9962092" }
amqp-helpers = { git = "https://github.com/ticketland-io/amqp-helpers", version = "0.4.3", rev = "78c9fcf" }
ticketland-signdrop = { git = "https://github.com/ticketland-io/ticketland-signdrop", version="0.1.5", rev = "e038733" }
borsh = "0.9.3"
