[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
actix = "0.13.0"
bolt-client = { version = "0.10.1", features =["tokio-stream"] }
bolt-proto = "0.11.0"
tokio = { version = "1.7.1", features = ["full", "macros"] }
tokio-retry = "0.3"
tokio-util = { version = "0.7.3", features = ["compat"] }
